# shipping-warehouse-simulator

./: .gitignore  CMakeLists.txt  KOSIOREK_MIKOLAJ_155281_opis_MAGAZYN_FIRMY_SPEDYCYJNEJ.md  RAPORT.md  README.md  build.sh
doc/: Doxyfile.in
src/: CMakeLists.txt  common.h  main.c  truck.c  utils.c  utils.h  worker_express.c  worker_std.c
src/common/: CMakeLists.txt  common.h  sem_wrapper.c  sem_wrapper.h  shm_wrapper.c  shm_wrapper.h  utils.c  utils.h
tests/: CMakeLists.txt  test_truck.cpp  test_utils.cpp  test_worker_express.cpp  test_worker_std.cpp
